--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-aiohttp==3.8.4
-pydantic==1.10.7
-python-dotenv==1.0.0
+fastapi
+uvicorn
+aiohttp
+pydantic
+python-dotenv
